[tool.poetry]
name = "awspython"
version = "0.1.0"
description = ""
authors = ["kero1976 <kero1976@outlook.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.162"
ruff = "^0.6.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
